#S10P31S204-267  [BE FEAT] 데이터 예외 필터링 관련 추가 로직